@@ -96,7 +96,7 @@ If you want to read a sequence of images, \f$ filename \f$ corresponds to the pa
 */
 void vpVideoReader::setFileName(const char *filename)
 {
-	if (filename == '\0')
+	if (!filename || *filename == '\0')
 	{
 		vpERROR_TRACE("filename empty ") ;
 		throw (vpImageException(vpImageException::noFileNameError,"filename empty ")) ;
